# MAGMA

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
docs/superpowers/specs/: 2026-03-17-agent-boilerplate-design.md
src/agent/: __main__.py  config.py  graph.py  logging.py  nodes.py  server.py  state.py  tools.py
src/agent/agents/agent1/: graph.py  nodes.py  state.py  tools.py
src/agent/agents/agent2/: graph.py  nodes.py  state.py  tools.py
src/agent/core/: registry.py  state.py
tests/: conftest.py  test_config.py  test_graph.py  test_server.py
